--- a/web/assets/i18n/en.json
+++ b/web/assets/i18n/en.json
@@ -1,7 +1,79 @@
 {
-	"AppName": "VisualTEAF",
-    "Start": "Comenzar",
-	"Welcome": "¡Welcome!",
-	"IntroText": "Esta App es una herramienta para ayudar a los profesionales sanitarios a realizar la valoración de los criterios diagnósticos del Trastorno del Espectro Alcohólico Fetal (TEAF) de acuerdo con las guías internacionales (Hoyme, 2016).\n\nEsta App está realizada por VisualTEAF y el Grup de Recerca Infància i Entorn (GRIE), Hospital Clínic-Maternitat, ICGON, FCRB, IDIBAPS, BCNatal, RICORS (RD21/0012/0017), Barcelona.\n\n© Visual TEAF 2023",
-	"Back": "Back"
+    "appName": "VisualTEAF",
+    "start": "Comenzar",
+    "welcome": "¡Bienvenido!",
+    "introText": "Esta App es una herramienta para ayudar a los profesionales sanitarios a realizar la valoración de los criterios diagnósticos del Trastorno del Espectro Alcohólico Fetal (TEAF) de acuerdo con las guías internacionales (Hoyme, 2016).\n\nEsta App está realizada por VisualTEAF y el Grup de Recerca Infància i Entorn (GRIE) del Hospital Clínic-Maternitat, ICGON, FCRB, IDIBAPS, BCNatal, RICORS (RD21/0012/0017), Barcelona.\n\n© Visual TEAF 2023",
+    "back": "Atrás",
+    "next": "Siguiente",
+    "logIn": "Iniciar sesión",
+    "signUp": "Registrarse",
+    "textLogIn": "Bienvenido a VisualTEAF",
+    "textSignUp": "Regístrate en VisualTEAF",
+    "forgotPassword": "¿Se te olvidó la contraseña?",
+    "resetPassword": "Recuperar contraseña",
+    "close": "Cerrar",
+    "startAnalysis": "Empezar análisis",
+    "patient": "Paciente",
+    "evaluation": "Evaluación",
+    "age": "Edad",
+    "infoAge": "Información sobre la edad",
+    "infoAgeText": "En los menores de 3 años de edad, el estudio neurocognitivo se basa en el retraso en el desarrollo. Además, en los menores de 6 años y en los mayores de 18 años no se puede realizar el estudio conductal.",
+    "accept": "Aceptar",
+    "adopted": "¿Adoptado/Acogido?",
+    "yes": "Sí",
+    "no": "No",
+    "receptionTime": "Tiempo de acogida",
+    "less24": "<24 meses",
+    "more24": "≥24 meses",
+    "domains": "Número de dominios afectados",
+    "infoDomains": "Información sobre los dominios",
+    "infoDomainsText": "Visualice el siguiente vídeo para obtener más información sobre los dominios afectados:",
+    "videoDomains": "Vimeo - Dominios Afectados",
+    "0": "0",
+    "1": "1",
+    "2": "≥ 2",
+    "alcohol_consume": "Consumo de alcohol en el embarazo",
+    "ethnicity": "Etnia",
+    "caucasian": "Caucásico",
+    "african": "Afroamericano",
+    "gender": "Género",
+    "male": "Hombre",
+    "female": "Mujer",
+    "weight": "Peso",
+    "weight_info": "Información sobre el peso",
+    "watch_weight_video": "Visualice el siguiente vídeo para obtener más información sobre cómo medir el peso:",
+    "vimeo_weight": "Vimeo - Peso",
+    "height": "Talla",
+    "height_info": "Información sobre la talla",
+    "watch_height_video": "Visualice el siguiente vídeo para obtener más información sobre cómo medir la estatura:",
+    "vimeo_height": "Vimeo - Talla",
+    "head_circumference": "Perímetro craneal",
+    "head_circumference_info": "Información sobre el perímetro craneal",
+    "measure_head_circumference": "Use una cinta métrica que no se pueda estirar. Rodee firmemente la cabeza con la cinta métrica alrededor de la circunferencia más ancha posible. La parte más ancha de la frente encima de las cejas, por encima de las orejas, la parte más prominente de la nuca. Visualice el siguiente vídeo para obtener más información sobre cómo medir el perímetro craneal:",
+    "vimeo_head_circumference": "Vimeo - Perímetro Craneal",
+    "palpebral_distance": "Distancia palpebral",
+    "palpebral_distance_info": "Información sobre la distancia palpebral",
+    "watch_palpebral_video": "Visualice el siguiente vídeo para obtener más información sobre cómo medir la distancia palpebral:",
+    "vimeo_palpebral": "Vimeo - Distancia Palpebral",
+    "summary": "Resumen",
+    "edit": "Editar",
+    "continue": "Continuar",
+    "filtrum": "Filtrum",
+    "upper_lip": "Labio superior",
+    "cranial_malformations": "Malformaciones craneales (RM)",
+    "recurrent_fever": "Fiebre recurrente",
+    "major_malformations": "¿Malformaciones mayores?",
+    "diagnosis": "Diagnóstico",
+    "result_info": "Información sobre el resultado",
+    "visit_link_diagnosis": "Visite el link para obtener más información sobre el diagnóstico:",
+    "TEAF_courses": "Cursos TEAF",
+    "save_patient": "Guardar paciente",
+    "back_to_home": "Volver a Inicio",
+    "data_loss_confirmation": "Si vuelve a la página de Inicio, se eliminarán los datos introducidos durante el diagnóstico. ¿Estás seguro de volver a Inicio?",
+    "cancel": "Cancelar",
+    "home": "Inicio",
+    "error": "Error",
+    "alcohol": "Alcohol",
+    "neurobehavioral": "Neuroconductual",
+    "head_circumference_short": "P. Craneal"
 }
