diccionario hasta analisis1

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -1,7 +1,79 @@
 {
-	"AppName": "VisualTEAF",
-    "Start": "Comenzar",
-	"Welcome": "¡Welcome!",
-	"IntroText": "Esta App es una herramienta para ayudar a los profesionales sanitarios a realizar la valoración de los criterios diagnósticos del Trastorno del Espectro Alcohólico Fetal (TEAF) de acuerdo con las guías internacionales (Hoyme, 2016).\n\nEsta App está realizada por VisualTEAF y el Grup de Recerca Infància i Entorn (GRIE), Hospital Clínic-Maternitat, ICGON, FCRB, IDIBAPS, BCNatal, RICORS (RD21/0012/0017), Barcelona.\n\n© Visual TEAF 2023",
-	"Back": "Back"
+    "appName": "VisualTEAF",
+    "start": "Start",
+    "welcome": "Welcome!",
+    "introText": "This App is a tool to assist healthcare professionals in assessing the diagnostic criteria of Fetal Alcohol Spectrum Disorder (FASD) according to international guidelines (Hoyme, 2016).\n\nThis App is developed by VisualTEAF and the Research Group on Childhood and Environment (GRIE) at Hospital Clínic-Maternitat, ICGON, FCRB, IDIBAPS, BCNatal, RICORS (RD21/0012/0017), Barcelona.\n\n© Visual TEAF 2023",
+    "back": "Back",
+    "next": "Next",
+    "logIn": "Log In",
+    "signUp": "Sign Up",
+    "textLogIn": "Welcome to VisualTEAF",
+    "textSignUp": "Register on VisualTEAF",
+    "forgotPassword": "Forgot your password?",
+    "resetPassword": "Reset password",
+    "close": "Close",
+    "startAnalysis": "Start analysis",
+    "patient": "Patient",
+    "evaluation": "Evaluation",
+    "age": "Age",
+    "infoAge": "Information about age",
+    "infoAgeText": "In children under 3 years of age, the neurocognitive study is based on developmental delay. In addition, in children under 6 years of age and in those over 18 years of age, the behavioral study cannot be performed.",
+    "accept": "Accept",
+    "adopted": "Adopted/Fostered?",
+    "yes": "Yes",
+    "no": "No",
+    "receptionTime": "Reception time",
+    "less24": "<24 months",
+    "more24": "≥24 months",
+    "domains": "Number of affected domains",
+    "infoDomains": "Information about the domains",
+    "infoDomainsText": "Watch the following video for more information on the affected domains:",
+    "videoDomains": "Vimeo - Affected Domains",
+    "0": "0",
+    "1": "1",
+    "2": "≥ 2",
+    "alcohol_cosume": "Alcohol consumption during pregnancy",
+    "ethnicity": "Ethnicity",
+    "caucasian": "Caucasian",
+    "african": "African American",
+    "gender": "Gender",
+    "male": "Male",
+    "female": "Female",
+    "weight": "Weight",
+    "weight_info": "Information about weight",
+    "watch_weight_video": "Watch the following video for more information on how to measure weight:",
+    "vimeo_weight": "Vimeo - Weight",
+    "height": "Height",
+    "height_info": "Information about height",
+    "watch_height_video": "Watch the following video for more information on how to measure height:",
+    "vimeo_height": "Vimeo - Height",
+    "head_circumference": "Head circumference",
+    "head_circumference_info": "Information about head circumference",
+    "measure_head_circumference": "Use a non-stretchable tape measure. Firmly wrap the tape measure around the widest possible circumference of the head. The widest part of the forehead above the eyebrows, above the ears, the most prominent part of the back of the head. Watch the following video for more information on how to measure head circumference:",
+    "vimeo_head_circumference": "Vimeo - Head Circumference",
+    "palpebral_distance": "Palpebral distance",
+    "palpebral_distance_info": "Information about palpebral distance",
+    "watch_palpebral_video": "Watch the following video for more information on how to measure palpebral distance:",
+    "vimeo_palpebral": "Vimeo - Palpebral Distance",
+    "summary": "Summary",
+    "edit": "Edit",
+    "continue": "Continue",
+    "filtrum": "Philtrum",
+    "upper_lip": "Upper lip",
+    "cranial_malformations": "Cranial malformations (MRI)",
+    "recurrent_fever": "Recurrent fever",
+    "major_malformations": "Major malformations?",
+    "diagnosis": "Diagnosis",
+    "result_info": "Information about the result",
+    "visit_link_diagnosis": "Visit the link for more information about the diagnosis:",
+    "TEAF_courses": "TEAF courses",
+    "save_patient": "Save patient",
+    "back_to_home": "Back to Home",
+    "data_loss_confirmation": "If you return to the Home page, the data entered during the diagnosis will be deleted. Are you sure you want to return to the Home page?",
+    "cancel": "Cancel",
+    "home": "Home",
+    "error": "Error",
+    "alcohol": "Alcohol",
+    "neurobehavioral": "Neurobehavioral",
+    "head_circumference_short": "Head Circumference"
 }
