diccionario actualizado hasta resumen

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -32,7 +32,7 @@
     "0": "0",
     "1": "1",
     "2": "≥ 2",
-    "alcohol_cosume": "Alcohol consumption during pregnancy",
+    "alcohol_consume": "Alcohol consumption during pregnancy",
     "ethnicity": "Ethnicity",
     "caucasian": "Caucasian",
     "african": "African American",
