--- a/i18n/es.json
+++ b/i18n/es.json
@@ -32,7 +32,7 @@
     "0": "0",
     "1": "1",
     "2": "≥ 2",
-    "alcohol_cosume": "Consumo de alcohol en el embarazo",
+    "alcohol_consume": "Consumo de alcohol en el embarazo",
     "ethnicity": "Etnia",
 	"caucasian": "Caucásico",
     "african": "Afroamericano",
