--- a/i18n/en.json
+++ b/i18n/en.json
@@ -1,77 +1,79 @@
 {
+    "appName": "VisualTEAF",
+    "start": "Start",
+    "welcome": "Welcome!",
+    "introText": "This App is a tool to assist healthcare professionals in assessing the diagnostic criteria of Fetal Alcohol Spectrum Disorder (FASD) according to international guidelines (Hoyme, 2016).\n\nThis App is developed by VisualTEAF and the Research Group on Childhood and Environment (GRIE) at Hospital Clínic-Maternitat, ICGON, FCRB, IDIBAPS, BCNatal, RICORS (RD21/0012/0017), Barcelona.\n\n© Visual TEAF 2023",
+    "back": "Back",
+    "next": "Next",
+    "logIn": "Log In",
+    "signUp": "Sign Up",
+    "textLogIn": "Welcome to VisualTEAF",
+    "textSignUp": "Register on VisualTEAF",
+    "forgotPassword": "Forgot your password?",
+    "resetPassword": "Reset password",
+    "close": "Close",
+    "startAnalysis": "Start analysis",
+    "patient": "Patient",
+    "evaluation": "Evaluation",
+    "age": "Age",
+    "infoAge": "Information about age",
+    "infoAgeText": "In children under 3 years of age, the neurocognitive study is based on developmental delay. In addition, in children under 6 years of age and in those over 18 years of age, the behavioral study cannot be performed.",
+    "accept": "Accept",
+    "adopted": "Adopted/Fostered?",
+    "yes": "Yes",
+    "no": "No",
+    "receptionTime": "Reception time",
+    "less24": "<24 months",
+    "more24": "≥24 months",
+    "domains": "Number of affected domains",
+    "infoDomains": "Information about the domains",
+    "infoDomainsText": "Watch the following video for more information on the affected domains:",
+    "videoDomains": "Vimeo - Affected Domains",
     "0": "0",
     "1": "1",
     "2": "≥ 2",
-    "accept": "Accept",
-    "adopted": "Adopted/Fostered?",
-    "age": "Age",
-    "alcohol": "Alcohol",
     "alcohol_consume": "Alcohol consumption during pregnancy",
-    "african": "African American",
-    "appname": "VisualTEAF",
-    "back": "Back",
-    "back_to_home": "Back to Home",
-    "cancel": "Cancel",
-    "caucasian": "Caucasian",
-    "close": "Close",
-    "continue": "Continue",
-    "cranial_malformations": "Cranial malformations (MRI)",
-    "data_loss_confirmation": "If you return to the Home page, the data entered during the diagnosis will be deleted. Are you sure you want to return to the Home page?",
-    "diagnosis": "Diagnosis",
-    "domains": "Number of affected domains",
-    "edit": "Edit",
-    "error": "Error",
     "ethnicity": "Ethnicity",
-    "female": "Female",
-    "filtrum": "Philtrum",
-    "forgotpassword": "Forgot your password?",
+    "caucasian": "Caucasian",
+    "african": "African American",
     "gender": "Gender",
-    "head_circumference": "Head circumference",
-    "head_circumference_info": "Information about head circumference",
-    "head_circumference_short": "Head Circumference",
-    "height": "Height",
-    "height_info": "Information about height",
-    "home": "Home",
-    "infoage": "Information about age",
-    "infoagetext": "In children under 3 years of age, the neurocognitive study is based on developmental delay. In addition, in children under 6 years of age and in those over 18 years of age, the behavioral study cannot be performed.",
-    "infodomains": "Information about the domains",
-    "infodomaintext": "Watch the following video for more information on the affected domains:",
-    "introtext": "This App is a tool to assist healthcare professionals in assessing the diagnostic criteria of Fetal Alcohol Spectrum Disorder (FASD) according to international guidelines (Hoyme, 2016).\n\nThis App is developed by VisualTEAF and the Research Group on Childhood and Environment (GRIE) at Hospital Clínic-Maternitat, ICGON, FCRB, IDIBAPS, BCNatal, RICORS (RD21/0012/0017), Barcelona.\n\n© Visual TEAF 2023",
-    "less24": "<24 months",
-    "logIn": "Log In",
-    "major_malformations": "Major malformations?",
     "male": "Male",
-    "measure_head_circumference": "Use a non-stretchable tape measure. Firmly wrap the tape measure around the widest possible circumference of the head. The widest part of the forehead above the eyebrows, above the ears, the most prominent part of the back of the head. Watch the following video for more information on how to measure head circumference:",
-    "more24": "≥24 months",
-    "neurobehavioral": "Neurobehavioral",
-    "next": "Next",
-    "no": "No",
-    "palpebral_distance": "Palpebral distance",
-    "palpebral_distance_info": "Information about palpebral distance",
-    "patient": "Patient",
-    "recurrent_fever": "Recurrent fever",
-    "resetpassword": "Reset password",
-    "result_info": "Information about the result",
-    "save_patient": "Save patient",
-    "signup": "Sign Up",
-    "start": "Start",
-    "startanalysis": "Start analysis",
-    "summary": "Summary",
-    "teaf_courses": "TEAF courses",
-    "textlogIn": "Welcome to VisualTEAF",
-    "textsignUp": "Register on VisualTEAF",
-    "upper_lip": "Upper lip",
-    "video_domains": "Vimeo - Affected Domains",
-    "visit_link_diagnosis": "Visit the link for more information about the diagnosis:",
-    "vimeo_head_circumference": "Vimeo - Head Circumference",
-    "vimeo_height": "Vimeo - Height",
-    "vimeo_palpebral": "Vimeo - Palpebral Distance",
-    "vimeo_weight": "Vimeo - Weight",
-    "watch_height_video": "Watch the following video for more information on how to measure height:",
-    "watch_palpebral_video": "Watch the following video for more information on how to measure palpebral distance:",
-    "watch_weight_video": "Watch the following video for more information on how to measure weight:",
-    "welcome": "Welcome!",
+    "female": "Female",
     "weight": "Weight",
     "weight_info": "Information about weight",
-    "yes": "Yes"
+    "watch_weight_video": "Watch the following video for more information on how to measure weight:",
+    "vimeo_weight": "Vimeo - Weight",
+    "height": "Height",
+    "height_info": "Information about height",
+    "watch_height_video": "Watch the following video for more information on how to measure height:",
+    "vimeo_height": "Vimeo - Height",
+    "head_circumference": "Head circumference",
+    "head_circumference_info": "Information about head circumference",
+    "measure_head_circumference": "Use a non-stretchable tape measure. Firmly wrap the tape measure around the widest possible circumference of the head. The widest part of the forehead above the eyebrows, above the ears, the most prominent part of the back of the head. Watch the following video for more information on how to measure head circumference:",
+    "vimeo_head_circumference": "Vimeo - Head Circumference",
+    "palpebral_distance": "Palpebral distance",
+    "palpebral_distance_info": "Information about palpebral distance",
+    "watch_palpebral_video": "Watch the following video for more information on how to measure palpebral distance:",
+    "vimeo_palpebral": "Vimeo - Palpebral Distance",
+    "summary": "Summary",
+    "edit": "Edit",
+    "continue": "Continue",
+    "filtrum": "Philtrum",
+    "upper_lip": "Upper lip",
+    "cranial_malformations": "Cranial malformations (MRI)",
+    "recurrent_fever": "Recurrent fever",
+    "major_malformations": "Major malformations?",
+    "diagnosis": "Diagnosis",
+    "result_info": "Information about the result",
+    "visit_link_diagnosis": "Visit the link for more information about the diagnosis:",
+    "TEAF_courses": "TEAF courses",
+    "save_patient": "Save patient",
+    "back_to_home": "Back to Home",
+    "data_loss_confirmation": "If you return to the Home page, the data entered during the diagnosis will be deleted. Are you sure you want to return to the Home page?",
+    "cancel": "Cancel",
+    "home": "Home",
+    "error": "Error",
+    "alcohol": "Alcohol",
+    "neurobehavioral": "Neurobehavioral",
+    "head_circumference_short": "Head Circumference"
 }
