--- a/i18n/es.json
+++ b/i18n/es.json
@@ -79,7 +79,13 @@
     "diagnosis_not_available": "Diagnóstico no disponible",
     "months": "Meses",
     "please": "Por favor, rellene todos los campos",
+    "please0": "Por favor, introduce un valor mayor de 0",
     "details": "Detalles",
     "delete": "Eliminar",
-    "error_details": "No se encontraron detalles para el paciente"
+    "error_details": "No se encontraron detalles para el paciente",
+    "FAS": "SAF",
+    "pFAS": "SAF p",
+    "NO FASD": "NO TEAF",
+    "ARND": "ARND",
+    "Incomplete": "Incompleto"
 }
