--- a/i18n/es.json
+++ b/i18n/es.json
@@ -2,7 +2,7 @@
     "appName": "VisualTEAF",
     "start": "Comenzar",
     "welcome": "¡Bienvenido!",
-    "introText": "Esta App es una herramienta para ayudar a los profesionales sanitarios a realizar la valoración de los criterios diagnósticos del Trastorno del Espectro Alcohólico Fetal (TEAF) de acuerdo con las guías internacionales (Hoyme, 2016).\n\nEsta App está realizada por VisualTEAF y el Grup de Recerca Infància i Entorn (GRIE) del Hospital Clínic-Maternitat, ICGON, FCRB, IDIBAPS, BCNatal, RICORS (RD21/0012/0017), Barcelona.\n\n© Visual TEAF 2023",
+    "introText": "Esta App es una herramienta para ayudar a los profesionales sanitarios a realizar la valoración de los criterios diagnósticos del Trastorno del Espectro Alcohólico Fetal (TEAF) de acuerdo con las guías internacionales (Hoyme, 2016).\n\nEsta App está realizada por VisualTEAF y el Grup de Recerca Infància i Entorn (GRIE) del Hospital Clínic-Maternitat, ICGON, FCRB, IDIBAPS, BCNatal, RICORS (RD21/0012/0017), Barcelona.\n\n© Visual TEAF 2024",
     "back": "Atrás",
     "next": "Siguiente",
     "logIn": "Iniciar sesión",
@@ -81,5 +81,9 @@
     "please": "Por favor, rellene todos los campos",
     "details": "Detalles",
     "delete": "Eliminar",
-    "error_details": "No se encontraron detalles para el paciente"
+    "error_details": "No se encontraron detalles para el paciente",
+    "SAF": "SAF",
+    "pFAS": "SAF p",
+    "NOTEAF": "NO TEAF",
+    "ARND": "ARND"
 }
