alcohol resumen corregido

--- a/i18n/es.json
+++ b/i18n/es.json
@@ -61,7 +61,7 @@
     "filtrum": "Filtrum",
     "upper_lip": "Labio superior",
     "cranial_malformations": "Malformaciones craneales (RM)",
-    "recurrent_fever": "Fiebre recurrente",
+    "recurrent_fever": "Convulsiones afebriles",
     "major_malformations": "¿Malformaciones mayores?",
     "diagnosis": "Diagnóstico",
     "result_info": "Información sobre el resultado",
