--- a/i18n/en.json
+++ b/i18n/en.json
@@ -2,7 +2,7 @@
     "appName": "VisualTEAF",
     "start": "Start",
     "welcome": "Welcome!",
-    "introText": "This App is a tool to assist healthcare professionals in assessing the diagnostic criteria of Fetal Alcohol Spectrum Disorder (FASD) according to international guidelines (Hoyme, 2016).\n\nThis App is developed by VisualTEAF and the Research Group on Childhood and Environment (GRIE) at Hospital Clínic-Maternitat, ICGON, FCRB, IDIBAPS, BCNatal, RICORS (RD21/0012/0017), Barcelona.\n\n© Visual TEAF 2024",
+    "introText": "This App is a tool to assist healthcare professionals in assessing the diagnostic criteria of Fetal Alcohol Spectrum Disorder (FASD) according to international guidelines (Hoyme, 2016).\n\nThis App is developed by VisualTEAF and the Infancy and Environment Research Group (GRIE) of the Hospital Clínic-Maternitat de Barcelona, ICGON, FCRB, IDIBAPS, BCNatal, Ricors SAMID (RD21/0012/0017), ISCIII (PI19/01853 and PI23/01220) and AGAUR (2021-SGR-01290).\n\n© Visual TEAF 2024",
     "back": "Back",
     "next": "Next",
     "logIn": "Log In",
@@ -17,7 +17,7 @@
     "evaluation": "Evaluation",
     "age": "Age",
     "infoAge": "Information about age",
-    "infoAgeText": "In children under 3 years of age, the neurocognitive study is based on developmental delay. In addition, in children under 6 years of age and in those over 18 years of age, the behavioral study cannot be performed.",
+    "infoAgeText": "In children under 3 years of age, the neurocognitive assessment refers to whether there is a delay in neurodevelopment according to their age. The behavioral evaluation must be adapted to the chronological age of each child.",
     "accept": "Accept",
     "adopted": "Adopted/Fostered?",
     "yes": "Yes",
