--- a/i18n/es.json
+++ b/i18n/es.json
@@ -1,8 +1,8 @@
 {
     "appName": "VisualTEAF",
     "start": "Comenzar",
-    "welcome": "¡Bienvenido!",
-    "introText": "Esta App es una herramienta para ayudar a los profesionales sanitarios a realizar la valoración de los criterios diagnósticos del Trastorno del Espectro Alcohólico Fetal (TEAF) de acuerdo con las guías internacionales (Hoyme, 2016).\n\nEsta App está realizada por VisualTEAF y el Grup de Recerca Infància i Entorn (GRIE) del Hospital Clínic-Maternitat, ICGON, FCRB, IDIBAPS, BCNatal, RICORS (RD21/0012/0017), Barcelona.\n\n© Visual TEAF 2024",
+    "welcome": "¡Bienvenido/a!",
+    "introText": "Esta App es una herramienta para ayudar a los profesionales sanitarios a realizar la valoración de los criterios diagnósticos del Trastorno del Espectro Alcohólico Fetal (TEAF) de acuerdo con las guías internacionales (Hoyme, 2016).\n\nEsta App está realizada por VisualTEAF y el Grup de Recerca Infància i Entorn (GRIE) del Hospital Clínic-Maternitat de Barcelona, ICGON, FCRB, IDIBAPS, BCNatal, Ricors SAMID (RD21/0012/0017), ISCIII (PI19/01853 y PI23/01220) y AGAUR (2021-SGR-01290).\n\n© Visual TEAF 2024",
     "back": "Atrás",
     "next": "Siguiente",
     "logIn": "Iniciar sesión",
@@ -17,7 +17,7 @@
     "evaluation": "Evaluación",
     "age": "Edad",
     "infoAge": "Información sobre la edad",
-    "infoAgeText": "En los menores de 3 años de edad, el estudio neurocognitivo se basa en el retraso en el desarrollo. Además, en los menores de 6 años y en los mayores de 18 años no se puede realizar el estudio conductal.",
+    "infoAgeText": "En los menores de 3 años de edad, el estudio neurocognitivo se refiere a si existe o no retraso en el neurodesarrollo en función de la edad. La valoración conductual debe adaptarse a la edad cronológica de cada niño/a.",
     "accept": "Aceptar",
     "adopted": "¿Adoptado/Acogido?",
     "yes": "Sí",
