--- a/i18n/en.json
+++ b/i18n/en.json
@@ -86,5 +86,6 @@
     "pFAS": "pFAS",
     "NOTEAF": "NO FASD",
     "ARND": "ARND",
-    "higher": "Please enter a value greater than 24 months"
+    "higher": "Please enter a value greater than 24 months",
+    "name": "Name"
 }
