--- a/i18n/es.json
+++ b/i18n/es.json
@@ -23,15 +23,18 @@
     "yes": "Sí",
     "no": "No",
     "receptionTime": "Tiempo de acogida",
-    "less24": "Menos de 24 meses",
-    "more24": "Más de 24 meses",
+    "less24": "≥ 24 meses",
+    "more24": "< 24 meses",
+    "+24": "Menos de 24 meses",
+    "-24": "Más de 24 meses",
     "domains": "Número de dominios afectados",
     "infoDomains": "Información sobre los dominios",
     "infoDomainsText": "Visualice el siguiente vídeo para obtener más información sobre los dominios afectados:",
     "videoDomains": "Vimeo - Dominios Afectados",
     "0": "0",
     "1": "1",
-    "2": "Más de 2",
+    "more2": "Más de 2",
+    "2": "≥ 2",
     "alcohol_consume": "Consumo de alcohol en el embarazo",
     "ethnicity": "Etnia",
 	"caucasian": "Caucásico",
@@ -88,5 +91,7 @@
     "ARND": "ARND",
     "higher": "Por favor, introduce un valor mayor de 24 meses",
     "name": "Nombre",
-    "sure": "¿Está seguro que quiere eliminar al paciente?"
+    "sure": "¿Está seguro que quiere eliminar al paciente?",
+    "pdf_done": "Diagnóstico realizado por Visual TEAF",
+    "pdf_header": "DIAGNÓSTICO DEL PACIENTE"
 }
