no se que toqué aquí

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -23,8 +23,8 @@
     "yes": "Yes",
     "no": "No",
     "receptionTime": "Reception time",
-    "less24": "≥ 24 months",
-    "more24": "< 24 months",
+    "less24": "< 24 months",
+    "more24": "≥ 24 months",
     "+24": "Less than 24 months",
     "-24": "More than 24 months",
     "domains": "Number of affected domains",
