--- a/i18n/es.json
+++ b/i18n/es.json
@@ -23,8 +23,8 @@
     "yes": "Sí",
     "no": "No",
     "receptionTime": "Tiempo de acogida",
-    "less24": "≥ 24 meses",
-    "more24": "< 24 meses",
+    "less24": "< 24 meses",
+    "more24": "≥ 24 meses",
     "+24": "Menos de 24 meses",
     "-24": "Más de 24 meses",
     "domains": "Número de dominios afectados",
