--- a/i18n/es.json
+++ b/i18n/es.json
@@ -93,5 +93,6 @@
     "name": "Nombre",
     "sure": "¿Está seguro que quiere eliminar al paciente?",
     "pdf_done": "Diagnóstico realizado por Visual TEAF",
-    "pdf_header": "DIAGNÓSTICO DEL PACIENTE"
+    "pdf_header": "DIAGNÓSTICO DEL PACIENTE",
+    "incomplete": "Incompleto"
 }
