cambios en los strings y en el boton de tiempo de acogida

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -44,15 +44,15 @@
     "female": "Female",
     "weight": "Weight",
     "weight_info": "Information about weight",
-    "watch_weight_video": "Watch the following video for more information on how to measure weight:",
+    "watch_weight_video": "Round down to the previous whole number if the decimal is less than .5, and round up to the next whole number if the decimal is equal to or greater than .5. Watch the following video for more information on how to measure weight:",
     "vimeo_weight": "Vimeo - Weight",
     "height": "Height",
     "height_info": "Information about height",
-    "watch_height_video": "Watch the following video for more information on how to measure height:",
+    "watch_height_video": "Round down to the previous whole number if the decimal is less than .5, and round up to the next whole number if the decimal is equal to or greater than .5. Watch the following video for more information on how to measure height:",
     "vimeo_height": "Vimeo - Height",
     "head_circumference": "Head circumference",
     "head_circumference_info": "Information about head circumference",
-    "measure_head_circumference": "Use a non-stretchable tape measure. Firmly wrap the tape measure around the widest possible circumference of the head. The widest part of the forehead above the eyebrows, above the ears, the most prominent part of the back of the head. Watch the following video for more information on how to measure head circumference:",
+    "measure_head_circumference": "Round down to the previous whole number if the decimal is less than .5, and round up to the next whole number if the decimal is equal to or greater than .5. Use a non-stretchable tape measure. Firmly wrap the tape measure around the widest possible circumference of the head. The widest part of the forehead above the eyebrows, above the ears, the most prominent part of the back of the head. Watch the following video for more information on how to measure head circumference:",
     "vimeo_head_circumference": "Vimeo - Head Circumference",
     "palpebral_distance": "Palpebral distance",
     "palpebral_distance_info": "Information about palpebral distance",
@@ -65,7 +65,7 @@
     "upper_lip": "Upper lip",
     "cranial_malformations": "Cranial malformations (MRI)",
     "recurrent_fever": "Recurrent fever",
-    "major_malformations": "Major malformations?",
+    "major_malformations": "Major malformations related to prenatal alcohol exposure?",
     "diagnosis": "Diagnosis",
     "result_info": "Information about the result",
     "visit_link_diagnosis": "Visit the link for more information about the diagnosis:",
@@ -86,8 +86,8 @@
     "delete": "Delete",
     "error_details": "No details found for the patient",
     "SAF": "FAS",
-    "pFAS": "pFAS",
-    "NOTEAF": "NO FASD",
+    "pFAS": "SAFp",
+    "NOTEAF": "NO TEAF",
     "ARND": "ARND",
     "higher": "Please enter a value greater than 24 months",
     "name": "Name",
