--- a/i18n/es.json
+++ b/i18n/es.json
@@ -44,15 +44,15 @@
     "female": "Mujer",
     "weight": "Peso",
     "weight_info": "Información sobre el peso",
-    "watch_weight_video": "Visualice el siguiente vídeo para obtener más información sobre cómo medir el peso:",
+    "watch_weight_video": "Reducir al número entero anterior si hay un decimal inferior a ,5 y aumentar al número entero posterior si hay un decimal igual o superior a ,5. Visualice el siguiente vídeo para obtener más información sobre cómo medir el peso:",
     "vimeo_weight": "Vimeo - Peso",
     "height": "Talla",
     "height_info": "Información sobre la talla",
-    "watch_height_video": "Visualice el siguiente vídeo para obtener más información sobre cómo medir la estatura:",
+    "watch_height_video": "Reducir al número entero anterior si hay un decimal inferior a ,5 y aumentar al número entero posterior si hay un decimal igual o superior a ,5. Visualice el siguiente vídeo para obtener más información sobre cómo medir la estatura:",
     "vimeo_height": "Vimeo - Talla",
     "head_circumference": "Perímetro craneal",
     "head_circumference_info": "Información sobre el perímetro craneal",
-    "measure_head_circumference": "Use una cinta métrica que no se pueda estirar. Rodee firmemente la cabeza con la cinta métrica alrededor de la circunferencia más ancha posible. La parte más ancha de la frente encima de las cejas, por encima de las orejas, la parte más prominente de la nuca. Visualice el siguiente vídeo para obtener más información sobre cómo medir el perímetro craneal:",
+    "measure_head_circumference": "Reducir al número entero anterior si hay un decimal inferior a ,5 y aumentar al número entero posterior si hay un decimal igual o superior a ,5. Use una cinta métrica que no se pueda estirar. Rodee firmemente la cabeza con la cinta métrica alrededor de la circunferencia más ancha posible. La parte más ancha de la frente encima de las cejas, por encima de las orejas, la parte más prominente de la nuca. Visualice el siguiente vídeo para obtener más información sobre cómo medir el perímetro craneal:",
     "vimeo_head_circumference": "Vimeo - Perímetro Craneal",
     "palpebral_distance": "Distancia palpebral",
     "palpebral_distance_info": "Información sobre la distancia palpebral",
@@ -65,7 +65,7 @@
     "upper_lip": "Labio superior",
     "cranial_malformations": "Malformaciones craneales (RM)",
     "recurrent_fever": "Convulsiones afebriles",
-    "major_malformations": "¿Malformaciones mayores?",
+    "major_malformations": "¿Malformaciones mayores relacionadas con la exposición prenatal al alcohol?",
     "diagnosis": "Diagnóstico",
     "result_info": "Información sobre el resultado",
     "visit_link_diagnosis": "Visite el link para obtener más información sobre el diagnóstico:",
@@ -86,7 +86,7 @@
     "delete": "Eliminar",
     "error_details": "No se encontraron detalles para el paciente",
     "SAF": "SAF",
-    "pFAS": "SAF p",
+    "pFAS": "SAFp",
     "NOTEAF": "NO TEAF",
     "ARND": "ARND",
     "higher": "Por favor, introduce un valor mayor de 24 meses",
